--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+    <title> Delivery Eat </title>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="заказ еды, доставка, меню, пицца, суши">
+    <meta name="description" content="Сайт для заказа еды с доставкой на дом. Выберите блюда из нашего меню и оформите заказ онлайн.">
+    <title>DeliveryEat</title>
+
+    <link rel="stylesheet" href="outline-prototpe-label.css">
+</head>
+<body>
+<header>
+    <h1> Delivery eat </h1>
+</header>
+<nav>
+    <ul>
+        <li><a href="#catalog">Каталог</a></li>
+        <li><a href="#Order">Корзина</a></li>
+        <li><a href="#Xz">Че каво</a></li>
+    </ul>
+</nav>
+<main>
+<section id ="Catalog">
+    <h2> Каталог </h2>
+    <article>
+        <div>
+        <h3> Пицца Маргарита </h3>
+        <p>Состав: мука, томаты, моцарелла. <strong>Цена: <span>550 руб</span></strong> </p>
+        </div>
+    </article>
+    <article>
+        <div>
+        <h3> Сет №4</h3>
+        <p> Состав: ролл филадельфия, запеченный ролл, классический ролл. <strong>Цена: <span>1100 руб </span></strong></p>
+        </div>
+    </article>
+</section>
+</main>
+
+<aside id="Order">
+    <h2>Корзина</h2>
+    <p>Выбранные блюда:</p>
+    <ul>
+        <li><em>Пицца Маргарита</em> - <ins> <span>550 руб</span></ins></li>
+        <li><i>Сет №4</i> - <del><span>1100 руб </span></del> <ins><span>950 руб </span></ins> (акция)</li>
+    </ul>
+    <p> Итого: <b> <span>1500 руб </span></b></p>
+</aside>
+
+<footer id="Xz">
+    <p>Контакты: Email: <span>Deliveryeat@yandex.ru</span> | Тел: +7 (999) 999-99-99</p>
+</footer>
+
+<pre>
+    +------------------+
+    |  Еда на Дом     |
+    +------------------+
+    |  Меню | Корзина |
+    +------------------+
+    </pre>
+<code>
+    System.out.println(Order)
+</code>
+
+<blockquote>
+    "Лучшая еда - это еда, доставленная вовремя!" - Команда "Еда на Дом"
+</blockquote>
+<p>Формула успеха: Качество <sup>2</sup> + Скорость <sub>3</sub> = Счастливые клиенты</p>
+<p>© 2025 Delivery Eat. Все права защищены.</p>
+</body>
+</html>
 
